"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

common/metaserver.c: use 'draw_info' to report being unable to connect
   to metaserver. Also changed failure color from red to black, so it appears
   after the 'trying to connect' even in split window mode.
gtk/gx11.c: correctly refresh text windows so failure messages appear.
Ryo 2004-03-12

gtk/keys.c: Windows now uses default 'keys' file if player file not found for
   key loading.
Ryo 2004-03-04

configure.in: Remove checks for gnome libraries, since we no longer use 
gnome/build a gnome client.
aclocal.m4: downgrade requirement for needed autoconf version.
MSW 2004-02-05

common/init.c: changed 'printf' to 'LOG' for HOME Win32-warning
Ryo 2004-02-01

common/image.c: fix stupid crashing mistake.
common/rcs-id.h: remove ; after #define
gtk/rcs-id.h: remove ; after #define
gtk/sound.c: #ifndef WIN32 for cfsndserv specific parts
Ryo 2004-01-30

all .c files:
all Makefile.in:
all rcs-id.h:
   Basic logging is now complete. All console messages sent by
   client are now sent to LOG(). All source files versions have
   are sent to LOG() at startup too (except for the still non 
   compilable gnome client!). Gtk client can show the Logs in
   'Help -> Report a Bug' along with a small doc on how to bug report
Tchize 2004-01-30

Documentation/
   Have added a Documentation directory. It contains a first 
   basic how-to related to client side scripting with two examples.
Tchize 2004-01-29

Those fixes are all Win32-specific, except the last one on keys.c
common/commands.c: Use correct Win32 function for closing socket.
common/image.c: Added missing headers, use correct mkdir syntax.
   Change a call to 'read', to be on the safe side.
common/misc.c: Added missing headers, use correct mkdir syntax, stub
   functions not yet ported.
common/player.c: Use correct Win32 function for closing socket.
gtk/gx11.c: Disabled bug window font setting, as GTK2 apparently doesn't